--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "*",
     "@angular/common": "5.0.1",
     "@angular/compiler": "5.0.1",
     "@angular/core": "5.0.1",
@@ -32,6 +33,7 @@
     "moment": "2.19.1",
     "ng2-charts": "1.6.0",
     "ngx-bootstrap": "1.9.3",
+    "ngx-toastr": "^8.0.0",
     "rxjs": "5.5.2",
     "simple-line-icons": "^2.4.1",
     "ts-helpers": "1.1.2",
