--- a/package.json
+++ b/package.json
@@ -8,17 +8,21 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "config": "node ./config.js",
+    "start": "node server.js",
+    "build": "npm run config -- --environment=prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "heroku-postbuild": "npm run build prod && npm --production=false install && ng build --prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "*",
+    "@angular/cli": "1.5.0",
     "@angular/common": "5.0.1",
     "@angular/compiler": "5.0.1",
+    "@angular/compiler-cli": "5.0.1",
     "@angular/core": "5.0.1",
     "@angular/forms": "5.0.1",
     "@angular/http": "5.0.1",
@@ -41,8 +45,6 @@
     "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "1.5.0",
-    "@angular/compiler-cli": "5.0.1",
     "@types/jasmine": "2.6.3",
     "@types/node": "8.0.50",
     "codelyzer": "4.0.1",
@@ -60,7 +62,7 @@
     "typescript": "^2.4.2"
   },
   "engines": {
-    "node": ">= 6.9.0",
-    "npm": ">= 3.0.0"
+    "node": "~6.9.0",
+    "npm": "~3.0.0"
   }
 }
