--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bootstrap": "4.0.0-beta.2",
     "chart.js": "2.7.1",
     "core-js": "2.5.1",
+    "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "font-awesome": "^4.7.0",
     "moment": "2.19.1",
