--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/core": "0.0.28",
     "@angular/animations": "*",
     "@angular/cli": "1.5.0",
     "@angular/common": "5.0.1",
@@ -64,7 +65,7 @@
     "typescript": "^2.4.2"
   },
   "engines": {
-    "node": "~6.9.0",
-    "npm": "~3.0.0"
+    "node": "~8.9.1",
+    "npm": "~5.5.1"
   }
 }
