--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "heroku-postbuild": "npm run build prod && npm --production=false install && ng build --prod"
+    "heroku-postbuild": "npm run build && ng build --env=prod"
   },
   "private": true,
   "dependencies": {
