--- a/package.json
+++ b/package.json
@@ -1,10 +1,6 @@
 {
-  "name": "@coreui/angular",
-  "version": "1.0.6",
-  "description": "Open Source Bootstrap Admin Template",
-  "author": "Łukasz Holeczek",
-  "homepage": "http://coreui.io",
-  "copyright": "Copyright 2017 creativeLabs Łukasz Holeczek",
+  "name": "@itcg-purchase-app/angular",
+  "version": "1.0.o",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
