--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@itcg-purchase-app/angular",
-  "version": "1.0.o",
+  "version": "1.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
